--- a/logstash/Dockerfile
+++ b/logstash/Dockerfile
@@ -5,3 +5,10 @@ FROM docker.elastic.co/logstash/logstash:${ELASTIC_VERSION}
 
 # Add your logstash plugins setup here
 # Example: RUN logstash-plugin install logstash-filter-json
+
+# install dependency
+#RUN /usr/share/logstash/bin/logstash-plugin install logstash-filter-aggregate
+#RUN /usr/share/logstash/bin/logstash-plugin install logstash-filter-mutate
+
+# copy lib database jdbc jars
+COPY ./dependency/mysql-connector-java-8.0.11.jar /usr/share/logstash/logstash-core/lib/jars/mysql-connector-java.jar
