Adds gitignore and renames products index in es.

--- a/logstash/pipeline/jdbc.conf
+++ b/logstash/pipeline/jdbc.conf
@@ -21,7 +21,7 @@ filter {
 }
 output {
   elasticsearch {
-    index => "delivery_is_idx"
+    index => "products"
 	hosts => "elasticsearch:9200"
 	user => "logstash_internal"
 	password => "${LOGSTASH_INTERNAL_PASSWORD}"
