--- a/kibana/config/kibana.yml
+++ b/kibana/config/kibana.yml
@@ -6,6 +6,7 @@ server.name: kibana
 server.host: 0.0.0.0
 elasticsearch.hosts: [ "http://elasticsearch:9200" ]
 monitoring.ui.container.elasticsearch.enabled: true
+enterpriseSearch.host: 'http://ent-search:3002'
 
 ## X-Pack security credentials
 #
